samples/stable-diffusion/manifests/app-gpu.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: stable-diffusion-worker
  name: stable-diffusion-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stable-diffusion-worker
  template:
    metadata:
      labels:
        app: stable-diffusion-worker
      annotations:
        kubectl.kubernetes.io/default-container: stable-diffusion-worker
    spec:
      containers:
      - image: ghcr.io/kedify/stable-diffusion-worker
        name: stable-diffusion-worker
        imagePullPolicy: IfNotPresent
        resources:
          # uncomment if you want one GPU exclusively for this app, otherwise the GPU will be shared among many
          # limits:
          #   nvidia.com/gpu: "1"
          requests:
            cpu: 500m
            memory: 1Gi
        volumeMounts:
        - name: shared-images
          mountPath: /app/results
      - image: minio/mc
        name: minio-sidecar
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        command: ["/bin/sh", "-c"]
        args:
        - |
          mc alias set shared http://minio:9000 $MINIO_USERNAME $MINIO_PASSWORD;
          mc admin info shared;
          echo "Minio configured, starting sync.."
          mc mirror --watch /images shared/images;

        volumeMounts:
        - name: shared-images
          mountPath: /images
      # if possible, spread the pods across all schedulable nodes
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              topologyKey: kubernetes.io/hostname
              labelSelector:
                matchLabels:
                  app: stable-diffusion-worker
      volumes:
      - name: shared-images
        emptyDir: {}
