samples/stable-diffusion/manifests/webapp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stable-diffusion-webui
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: stable-diffusion-webui
            port:
              number: 80
  # tls:
  # - hosts:
  #   - ai.example.kedify.io
  #   secretName: webui-tls
